--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,18 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <!-- MinIO Java SDK -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.9</version> <!-- 推荐稳定版本，可按需更新 -->
+        </dependency>
+        <!-- 工具类（可选，简化文件处理） -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.20</version>
+        </dependency>
         <!-- Maven -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
