--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.0</version>
+        <version>3.2.1</version>
         <relativePath/>
     </parent>
     <groupId>com.example</groupId>
@@ -16,14 +16,29 @@
     <!-- 修改打包方式为WAR -->
     <packaging>war</packaging>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
     </properties>
+    <repositories>
+        <!-- 保留你的私有仓库 -->
+        <repository>
+            <id>nexus-speedcode</id>
+            <url>http://123.232.10.234:8212/nexus/content/groups/public/</url>
+            <releases><enabled>true</enabled></releases>
+            <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <!-- Spring 官方仓库（下载 Spring AI 1.0.3） -->
+        <repository>
+            <id>spring-releases</id>
+            <url>https://repo.spring.io/release</url>
+            <releases><enabled>true</enabled></releases>
+        </repository>
+    </repositories>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.ai</groupId>
                 <artifactId>spring-ai-bom</artifactId>
-                <version>1.0.0</version> <!-- 更换为 1.0.0 版本 -->
+                <version>1.1.0</version> <!-- 更换为 1.0.0 版本 -->
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -84,11 +99,12 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.2.2</version>
+            <version>3.0.3</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
